catalogue/kubernetes-helm/environnement/exercices/03-ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vitrine-nginx-svc
spec:
  type: ClusterIP
  selector:
    app: vitrine-web
  ports:
    - name: http
      port: 80
      targetPort: 8080
